--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "axios": "^0.18.0",
     "cors": "^2.8.5",
+    "csv-generate": "^3.2.0",
     "express": "^4.16.4",
     "faker": "^4.1.0",
     "fs": "0.0.1-security",
