--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react-dev": "webpack -d --watch",
     "react-prod": "webpack -p",
     "server": "nodemon server/index.js",
-    "seed": "node database/seed.js",
+    "seed": "node database/newseed.js",
     "test": "jest",
     "test-watch": "jest --watch --coverage --colors --verbose",
     "node-server": "node database/seed.js; node server/index.js",
