setup for testing

--- a/artillery.yml
+++ b/artillery.yml
@@ -1,9 +1,11 @@
 config:
   target: "http://localhost:6969"
   processor: "./artilleryFuncs.js"
+  http:
+    pool: 12
   phases:
-    - duration: 60
-      arrivalRate: 1000
+    - duration: 20
+      arrivalRate: 100
 scenarios:
   - flow:
     - function: "generateRandomData"
