--- a/package.json
+++ b/package.json
@@ -9,15 +9,12 @@
   },
   "scripts": {
     "start": "webpack-dev-server --config ./webpack.config.js --mode development",
-    "build": "webpack -d",
-    "react-dev": "webpack -d --watch",
-    "react-prod": "webpack -p",
+    "dev-start": "webpack -d --watch",
+    "prod-start": "webpack -p",
     "server": "nodemon server/index.js",
     "seed": "node database/newseed.js",
     "test": "jest",
     "test-watch": "jest --watch --coverage --colors --verbose",
-    "node-server": "node database/seed.js; node server/index.js",
-    "db-start": "json-server --watch db.json",
     "generate-pics": "node ./util/photoGenerator.js"
   },
   "dependencies": {
@@ -48,6 +45,7 @@
     "@babel/plugin-proposal-class-properties": "^7.3.0",
     "@babel/preset-env": "^7.2.3",
     "@babel/preset-react": "^7.0.0",
+    "artillery": "^1.6.0-27",
     "babel-loader": "^8.0.5",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "babel-preset-airbnb": "^3.2.0",
@@ -62,6 +60,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
     "jest": "^24.1.0",
+    "morgan": "^1.9.1",
     "newrelic": "^5.6.0",
     "webpack": "^4.29.1",
     "webpack-cli": "^3.2.3",
