--- a/artillery.yml
+++ b/artillery.yml
@@ -1,11 +1,11 @@
 config:
-  target: "http://localhost:6969"
+  target: "http://ec2-18-222-149-148.us-east-2.compute.amazonaws.com"
   processor: "./artilleryFuncs.js"
   http:
     pool: 12
   phases:
     - duration: 20
-      arrivalRate: 100
+      arrivalRate: 1
 scenarios:
   - flow:
     - function: "generateRandomData"
